# marketlens-strike

./: .env.example  .gitignore  AGENTS.md  Justfile  README.md  package.json  pyproject.toml
.serena/: project.yml
.tmp/: live_evidence_20260526_2245_cron_once.sh  live_evidence_20260527_recovery_watchdog.sh  live_evidence_current_status_2026-05-26.md
configs/: env.example  fee_model.bitget_demo.yaml  fee_model.trade_xyz.yaml  halt_policy.yaml  instrument_registry.seed.json  micro_live_policy.yaml  real_market_provider_policy.yaml  scalping_policy.yaml  trade_xyz_data_collection.yaml
docs/: ACCEPTANCE_AUDIT.md  AGENT_ASSESSMENT_INDIVIDUAL_TRADER_2026-06-20.md  AGENT_ASSESSMENT_PRACTICAL_DECISION_NOTE_2026-06-20.md  AI_AGENT_STRATEGY_BACKTEST_GUIDE.md  APP_CURRENT_STATE_DETAILED_2026-06-20.md  APP_CURRENT_STATE_OVERVIEW_2026-07-05.md  APP_TERMS_GLOSSARY_2026-07-05.md  APP_USER_GUIDE_NON_TECHNICAL_2026-06-20.md  ARCHITECTURE_AND_PHASES.md  CODE_STATUS.md  CURRENT_ARTIFACT_SURFACE_REFERENCE_2026-07-05.md  CURRENT_DOCS_AND_STRUCTURE_TRIAGE_2026-06-27.md  CURRENT_DOCS_INDEX_2026-07-05.md  CURRENT_GOAL_AND_DIRECTION_2026-07-05.md  CURRENT_PHASE_STATUS_AND_NEXT_GATE.md  CURRENT_STATE.md  DOCS_LINT_POLICY_2026-05-30.md  DOCUMENT_AUDIT_2026-05-26.md  DOCUMENT_AUDIT_2026-05-27.md  DOCUMENT_AUDIT_2026-05-28.md  DOCUMENT_AUDIT_2026-05-30.md  DOCUMENT_AUDIT_2026-05-31.md  DOCUMENT_AUDIT_2026-05-31_BACKTEST_UPDATE.md  DOCUMENT_AUDIT_2026-06-06_CODE_TRUTH_REFRESH.md  DOCUMENT_AUDIT_2026-06-08_CODE_TRUTH_REFRESH.md  DOCUMENT_AUDIT_2026-06-09_NDX_QQQ_VENUE_SUITABILITY_REFRESH.md  DOCUMENT_AUDIT_2026-06-15_CODE_TRUTH_CHECKLIST.md  DOCUMENT_AUDIT_2026-06-17_CODE_TRUTH_CHECKLIST.md  DOCUMENT_AUDIT_2026-06-22_CODE_TRUTH_TRIAGE.md  DOCUMENT_AUDIT_2026-06-26_CODE_TRUTH_DOC_TRIAGE.md  DOCUMENT_AUDIT_2026-07-05_CODE_TRUTH_DOC_TRIAGE.md  DOCUMENT_CLEANUP_EXECUTION_PLAN_2026-06-06.md  EDGE_CANDIDATE_FACTORY_CORE_2026-06-29.md  ENGINEERING_HANDOFF_NOTE.md  FAILURE_MODE_RESPONSIBILITY_MAP_2026-05-27.md  FAILURE_MODE_RESPONSIBILITY_MAP_2026-05-28.md  FEATURE_CAPABILITY_SUMMARY_2026-06-27.md  FINAL_STATE_PROGRESS_ASSESSMENT_2026-07-04.md  IMPLEMENTATION_STATUS.md  IMPLEMENTED_SURFACES.md  (+48 more)
plan/: 20260526_211746_trade_xyz_quote_collector_cli_plan.md  PR-00_TASK_CHAIN.yaml  PR-00_python_313_migration_plan.md  PR-00_to_PR-08_TASK_CHAIN.yaml  PR-00_to_PR-08_implementation_plan.md  README.md  STRATEGY_INPUT_CONTRACT_AND_IDEA_INTAKE_IMPLEMENTATION_PLAN_2026-06-18.md  STRATEGY_REVIEW_CONTRACT_AND_NEXT_IMPLEMENTATION_PLAN_2026-06-16.md  STRATEGY_REVIEW_NEXT_IMPLEMENTATION_PLAN_2026-06-16.md  TRADE_XYZ_AFTER_WS_SMOKE_DATA_READY_PLAN_2026-06-01.md  TRADE_XYZ_BACKTEST_REAL_DATA_INGESTION_HANDOFF_2026-06-01.md  TRADE_XYZ_DATA_COLLECTION_EXPANSION_IMPLEMENTATION_PLAN_2026-06-01.md  ねくすと.md
schemas/: backtest_data_availability_ledger.v1.schema.json  backtest_kill_gate.v1.schema.json  candidate_protocol_manifest.v1.schema.json  core_dag.v1.schema.json  cost_snapshot.schema.json  counter_dag.v1.schema.json  crypto_perp_account_snapshot.v1.schema.json  crypto_perp_actual_cash_report_gate_run.v1.schema.json  crypto_perp_actual_cash_rows_summary.v1.schema.json  crypto_perp_backtest_candidate_pack.v1.schema.json  crypto_perp_backtest_data_availability_ledger.v1.schema.json  crypto_perp_backtest_result.v1.schema.json  crypto_perp_backtest_rolling_stability_result.v1.schema.json  (+184 more)
(+2839 files in other folders)
