[project]
name = "sis-venue-probe"
version = "0.1.0"
description = "Venue research and Go/No-Go engine for Ostium/gTrade QQQ/SPY/XAU swing research"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "loguru>=0.7",
  "pydantic>=2",
  "pydantic-settings>=2",
  "httpx>=0.27",
  "polars>=1",
  "duckdb>=1",
  "pyarrow>=15",
  "python-dotenv>=1",
  "exchange-calendars>=4",
  "jsonschema>=4",
  "pyyaml>=6",
]

[project.scripts]
sis = "sis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.11",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/sis"]
