[project]
name = "marketlens-strike"
version = "0.1.0"
description = "Venue research and Go/No-Go engine for Ostium/gTrade QQQ/SPY/XAU swing research"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "loguru>=0.7",
  "pydantic>=2",
  "pydantic-settings>=2",
  "httpx>=0.27",
  "filelock>=3.16",
  "polars>=1",
  "duckdb>=1",
  "pyarrow>=15",
  "python-dotenv>=1",
  "exchange-calendars>=4",
  "jsonschema>=4",
  "pyyaml>=6",
  "tenacity>=9",
  "yfinance>=0.2",
  "yahooquery>=2.3",
  "fredapi>=0.5",
  "pandas-datareader>=0.10",
]

[project.scripts]
sis = "sis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-httpx>=0.36.2",
  "ruff>=0.11",
  "vcrpy>=8.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/sis"]

[tool.pyrefly]
project-includes = [
  "src/**/*.py",
  "tests/**/*.py",
]

project-excludes = [
  "**/.venv/**",
  "**/__pycache__/**",
  "**/.tmp/**",
  "**/_runs/**",
  "**/htmlcov/**",
  "**/dist/**",
  "**/build/**",
]
